* Now Sale Line Tree view in Sale form view is sale_line_view_tree_sequence view
* Add discount field in sale_line_view_tree view

Version 2.1.1 - 2012-01-26
* Point release

Version 2.1.0 - 2011-12-15
* Point release

Version 2.0.0 - 2011-11-14
* Major release

Version 1.8.0 - 2011-11-07
* Major release

Version 1.7.0 - 2011-02-24
* Point release

Version 1.6.0 - 2011-01-18
* Major release

Version 1.5.1 - 2011-01-13
* Point release

Version 1.5.0 - 2010-12-30
* Point release

Version 1.4.1 - 2010-12-02
* Bug fixes (see mercurial logs for details)

Version 1.4.0 - 2010-10-02
* Initial release
